Correction problème du Header et Overflow

--- a/src/styles/components/accueil.scss
+++ b/src/styles/components/accueil.scss
@@ -1,6 +1,7 @@
 .accueil {
     height: 987px;
     padding: 50px 0;
+    overflow-x: initial;
 
     @media screen and (max-width: $breakpoint-ml) {
         height: fit-content;
