--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -6,7 +6,8 @@
     top: 0;
     left: 0;
     transition: all 0.4s $ease-out-expo;
-    margin:  0 0 20px 0;
+    margin: 0 0 20px 0;
+    overflow-x: hidden;
 
     .wrapper {
         display: flex;
@@ -242,5 +243,9 @@
 }
 
 .nav-is-active {
-    overflow-Y: hidden;
+    overflow-y: hidden;
+
+    .header {
+        overflow-x: initial;
+    }
 }
