--- a/src/styles/components/propos.scss
+++ b/src/styles/components/propos.scss
@@ -79,6 +79,7 @@
 .loisirs {
     padding: 100px 0 50px;
     background-color: var(--color-bg-secondary);
+    overflow-x: initial;
 
     .wrapper {
         position: relative;
