--- a/src/styles/components/scrolly.scss
+++ b/src/styles/components/scrolly.scss
@@ -13,6 +13,17 @@
         }
     }
 
+    [data-scrolly='fromTop'] {
+        opacity: 0;
+        transform: translateY(-200px);
+        transition: all 0.4s ease-out;
+
+        &.is-active {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
     [data-scrolly='fromLeft'] {
         opacity: 0;
         transform: translateX(-200px);
